Capa de seguridad con JWT